fixed footer gap

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@ body {
 main {
   margin-top: 5rem;
   padding-bottom: 2rem;
-  min-height: calc(100vh - 5.6rem - 5rem);
+  min-height: calc(100vh - 5rem - 5rem);
 }
 
 html,
